--- a/index.html
+++ b/index.html
@@ -76,11 +76,15 @@
 				width: 400px;
                 height: 250px;
                 border-radius: 10px;
+				overflow:hidden;
 			}
             img{
                 width: 400px;
                 height: 250px;
                 border-radius: 10px;
+				overflow:hidden;
+				flex-shrink:1;
+				flex-grow:0;
             }
 
             #hero_card{
@@ -269,3 +273,4 @@
     </body>
 
 </html>
+
