--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-				align-content:space-evenly;
+				align-content:space-around;
 				flex-wrap:wrap;
             }
 
@@ -70,14 +70,7 @@
 				flex-shrink:1;
 				flex-grow:0;
             }
-			#home div img{
-				flex-shrink:1;
-				flex-grow:0;
-				width: 400px;
-                height: 250px;
-                border-radius: 10px;
-				overflow:hidden;
-			}
+			
             img{
                 width: 400px;
                 height: 250px;
@@ -273,4 +266,5 @@
     </body>
 
 </html>
+
 
