--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 padding: 20px;
                 margin-top: 90px;
                 display: flex;
-                justify-content: space-between;
+                justify-content: space-around;
                 align-items: center;
 				align-content:space-around;
 				flex-wrap:wrap;
@@ -266,5 +266,6 @@
     </body>
 
 </html>
+
 
 
