--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 border-radius: 20px;
 				flex-shrink:1;
 				flex-grow:0;
+				overflow:hidden;
             }
 
             #home{
@@ -266,6 +267,7 @@
     </body>
 
 </html>
+
 
 
 
