--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
 				flex-shrink:1;
 				flex-grow:0;
             }
+			.para{
+				width: 700px;
+				flex-shrink:1;
+				flex-grow:0;
+				overflow:hidden;
+			}
 			
             img{
                 width: 400px;
@@ -192,7 +198,7 @@
 
         <section id="hero_card">
             <div class="w">
-                <p> <i>India has a wide range of landscapes ,from kashmir to kanyakumari . varies landscapes of india  include deserts,cold deserts,mountain ranges,rain forests,grass lands,mongrooves,beaches,deltas,platues,vally etc.</i></p>
+                <p class="para"> <i>India has a wide range of landscapes ,from kashmir to kanyakumari . varies landscapes of india  include deserts,cold deserts,mountain ranges,rain forests,grass lands,mongrooves,beaches,deltas,platues,vally etc.</i></p>
                 <div id="down">
                 <p> 19/09/2025 </p>
                 <a class="read" href=""> <b>Read Now</b> </a>
@@ -266,6 +272,7 @@
     </body>
 
 </html>
+
 
 
 
