--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
 				flex-shrink:1;
 				flex-grow:0;
             }
+			.para{
+                width: 400px;
+				flex-shrink:1;
+				flex-grow:0;
+            }
 			
             img{
                 width: 400px;
@@ -191,8 +196,8 @@
         </section>
 
         <section id="hero_card">
-            <div>
-                <p class="w"> <i>India has a wide range of landscapes ,from kashmir to kanyakumari . varies landscapes of india  include deserts,cold deserts,mountain ranges,rain forests,grass lands,mongrooves,beaches,deltas,platues,vally etc.</i></p>
+            <div class="w">
+                <p class="para"> <i>India has a wide range of landscapes ,from kashmir to kanyakumari . varies landscapes of india  include deserts,cold deserts,mountain ranges,rain forests,grass lands,mongrooves,beaches,deltas,platues,vally etc.</i></p>
                 <div id="down">
                 <p> 19/09/2025 </p>
                 <a class="read" href=""> <b>Read Now</b> </a>
@@ -266,6 +271,7 @@
     </body>
 
 </html>
+
 
 
 
